--- a/Dashboard_MilkStore/Dashboard_MilkStore.csproj
+++ b/Dashboard_MilkStore/Dashboard_MilkStore.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>2855c2a6-759a-4e33-9d6f-29154829a071</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
